==================
 Docutils History
==================

:Author: David Goodger; open to all Docutils developers
:Contact: goodger@python.org
:Date: $Date$
:Revision: $Revision$
:Web site: http://docutils.sourceforge.net/
:Copyright: This document has been placed in the public domain.

.. contents::


Changes Since 0.4
=================

* docutils/io.py:

  - Added code to determine the input encoding from data: encoding
    declarations or the presence of byte order marks (UTF-8 & UTF-16).

* docutils/nodes.py:

  - Added ``document.__getstate__`` method, for pickling.

* docutils/parsers/rst/states.py:

  - Unquoted targets beginning with an underscore (``.. __target:
    URI``) are no longer accepted.
  - Added support for multiple attributions in a physical block quote
    (indented text block), dividing it into multiple logical block
    quotes.

* docutils/writers/html4css1/__init__.py:

  - Moved template functionality from the PEP/HTML writer here.
  - Expanded the fragments available in the ``parts`` attribute.

* docutils/writers/html4css1/template.txt: Added to project.

* docutils/writers/pep_html/:

  - Moved template functionality to the HTML writer.

* docutils/writers/s5_html/__init__.py:

  - Added ``view_mode`` & ``hidden_controls`` settings
    (``--view-mode`` & ``--hidden-controls/--visible-controls``
    options).

* docutils/writers/latex2e/__init__.py:

  - Fix: Renaming contents section does not work with latex writer. 
    sourceforge bug 1487405
  - Apply patch for custom roles with classes from Edward Loper.

Release 0.4 (2006-01-09)
========================

* General:

  - Updated the project policies for trunk/branch development &
    version numbering.

* docutils/__init__.py:

  - Added ``__version_details__`` attribute to describe code source
    (repository/snapshot/release).
  - Replaced ``default_transforms`` attribute of TransformSpec with
    ``get_transforms()`` method.

* docutils/core.py:
