@@ -1,3 +1,5 @@
+.. -*- coding: utf-8 -*-
+
 ==================
  Docutils History
 ==================
@@ -31,6 +33,8 @@ Changes Since 0.4
   - Added support for multiple attributions in a physical block quote
     (indented text block), dividing it into multiple logical block
     quotes.
+  - Added support for unicode bullets in bullet lists: "•", "‣", and
+    "⁃".
 
 * docutils/writers/html4css1/__init__.py:
 
